test/e2e/pass/runtime/whole_term_runtime_result.cst
runtime fn source() -> num { 1 }

fn value() -> runtime num {
    source();
    1
}

runtime fn runtime_value() -> num {
    source();
    1
}

fn checked_add(a: num, b: num) -> num {
    let result = a + b;
    result
}

fn main() {
    let static_value: num = checked_add(1, 2);
    let dynamic_value: runtime num = checked_add(source(), 2);
    let explicit_runtime: runtime num = value();
    let runtime_fn_value: runtime num = runtime_value();
    let _ = static_value;
    let _ = dynamic_value;
    let _ = explicit_runtime;
    let _ = runtime_fn_value;
}
