test/e2e/fail_compile/type_errors/ct_required_forwarded_local_annotation.cst
runtime fn source() -> num { 1 }

fn wrap(count: num) -> num {
    let forwarded: const num = count;
    forwarded
}

fn main() -> runtime num {
    wrap(source())
}
